made a blank template

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">ListViewExample</string>
-    <string name="petcare">PetCare</string>
+    <string name="template">template</string>
 </resources>
