make MainActivity ui and made a list adapter and delete_menu.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="template">template</string>
+    <string name="funkopop_collection">FunkoPOP Collection</string>
+    <string name="make_new_entry">Make New Entry</string>
+    <string name="update_entry">Update Entry</string>
+    <string name="delete">delete</string>
 </resources>
